--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,22 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
 
+.title7 { 
+  font-size: 0.8rem;
+  font-style: italic;
+}
+
+.logo {
+  display: block;
+  position: relative;
+  top: -50%;
+}
+
+.form-control:focus {
+  border-color: #167bff;
+  box-shadow: none;
+}
+
 footer {
   height: 150px;
 }
