--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 *, ::before, ::after {
   padding: 0;
   margin: 0;
@@ -30,15 +29,34 @@ footer {
   height: 50px;
 }
 
-@media only screen and (max-width: 768px){
-  #faux-div{
-    height: 40px;
-  }
-}
-@media only screen and (min-width: 769px){
-  #faux-div{
-    height: 150px;
-  }
+#overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, .6);
 }
 
-/*# sourceMappingURL=style.css.map */
+.modal-content {
+  min-height: 400px !important;
+}
+
+#autocom-box {
+  border: none !important;
+  padding: 10px 8px !important;
+  overflow-y: auto !important;
+  opacity: 0;
+  transition: opacity, 500ms;
+  pointer-events: none;
+}
+
+#autocom-box li {
+  list-style: none !important;
+  border-radius: 3px !;
+
+}
+
+#autocom-box li:hover {
+  background: #efefef !important;
+}
