--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,6 @@ footer {
   overflow-y: auto !important;
   opacity: 0;
   transition: opacity, 500ms;
-  pointer-events: none;
 }
 
 #autocom-box li {
@@ -58,5 +57,5 @@ footer {
 }
 
 #autocom-box li:hover {
-  background: #efefef !important;
+  background: #abb8f3 !important;
 }
